--- a/index.html
+++ b/index.html
@@ -9,70 +9,74 @@
 <body>
 <header>
     <nav>
+        <a href="./index.html">Web <span>Studio</span></a>
     <ul>
-        <li> <a href="">Web <span>Studio</span></a> </li>
-        <li> <a href="">Studio</a> </li>
+
+        <li> <a href="./index.html">Studio</a> </li>
         <li> <a href="">Portfolio</a> </li>
         <li> <a href="">Contacts</a> </li>
     </ul>
     </nav>
-    <a href="mailto:bkmz9249@gmail.com">bkmz9249@gmail.com</a>
-    <a href="tel:+380999999999">+380999999999</a>
+    <ul>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li></li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+    </ul>
 </header>
 <main>
     <section>
-        <h1>Effective Solutions <br> for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
     </section>
-    <button type="button">Order Service</button>
-</main>
-<div>
+
+<section>
     <ul>
         <li><h3>Strategy</h3>
-        Our goal is to identify the business
-        problem to walk away with the perfect and creative solution. </li>
+        <p> Our goal is to identify the business
+        problem to walk away with the perfect and creative solution. </p></li>
         <li><h3>Punctuality</h3>
-        Bring the key message to the brand's audience for the best price within the shortest possible time.</li>
+        <p> Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
         <li><h3>Diligence</h3>
-        Research and confirm brands that present the strongest digital growth opportunities and minimize risk. </li>
+        <p> Research and confirm brands that present the strongest digital growth opportunities and minimize risk. </p></li>
         <li><h3>Technologies</h3>
-        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </li>
+        <p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p> </li>
     </ul>
-</div>
+</section>
 <section>
     <h2>What Are We Doing</h2>
     <ul>
         <li><img src="./img/photo1.jpg" alt="photo1" width="360" height="300"></li>
-        <li><img src="/img/photo2.jpg" alt="photo2" width="360" height="300"></li>
-        <li><img src="/img/photo3.jpg" alt="photo3" width="360" height="300"></li>
+        <li><img src="./img/photo2.jpg" alt="photo2" width="360" height="300"></li>
+        <li><img src="./img/photo3.jpg" alt="photo3" width="360" height="300"></li>
     </ul>
 </section>
 <section>
     <h2>Our Team</h2>
 <ul>
     <li>
-        <img src="/img/photo4.jpg" alt="Mark" width="260" height="260">
+        <img src="./img/photo4.jpg" alt="Mark" width="260" height="260">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
     </li>
     <li>
-        <img src="/img/photo5.jpg" alt="Tom" width="260" height="260">
+        <img src="./img/photo5.jpg" alt="Tom" width="260" height="260">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="/img/photo6.jpg" alt="Camilla" width="260" height="260">
+        <img src="./img/photo6.jpg" alt="Camilla" width="260" height="260">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
     </li>
     <li>
-        <img src="/img/photo7.jpg" alt="Gabriel" width="260" height="260">
+        <img src="./img/photo7.jpg" alt="Gabriel" width="260" height="260">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
     </li>
 </ul>
 </section>
+</main>
 <footer>
-    <h3>Web <span>Studio</span></h3>
+    <a href="./index.html">Web <span>Studio</span></a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
