--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <nav>
-        <a href="./index.html">Web <span>Studio</span></a>
+        <a href="./index.html">Web<span>Studio</span></a>
     <ul>
 
         <li> <a href="./index.html">Studio</a> </li>
@@ -19,7 +19,7 @@
     </nav>
     <ul>
     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li></li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+    <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
     </ul>
 </header>
 <main>
@@ -76,7 +76,7 @@
 </section>
 </main>
 <footer>
-    <a href="./index.html">Web <span>Studio</span></a>
+    <a href="./index.html">Web<span>Studio</span></a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
